[package]
name = "idmap-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.32", features = ["tokio-comp", "aio", "connection-manager"] }
futures = "0.3"
bs58 = "0.5"
sha2 = "0.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
curve25519-dalek = { version = "4.1", features = ["serde"] } 
solana-client = "1.18"
solana-sdk = "1.18"
spl-token-2022 = "3.0"
spl-associated-token-account = "3.0"
hex = "0.4"
base64 = "0.21"
